# gpt-oss-ui

./: .gitignore  ENSEMBLE_CONFIG_CHANGES.md  ENSEMBLE_SYSTEM.md  app.py  chat_logic.py  compliance_prompt.txt  config.py  desktop_app.py  model_configs.py  nothink_prompt.txt  presets.json  pyproject.toml  system_prompts.py  test_ensemble.py  theme.py  ui_components.py
.streamlit/: config.toml
assets/: theme.qss
core/: __init__.py  chat_persistence.py  chat_service.py  ensemble_orchestrator.py  ensemble_synthesis.py  m2m_formatter.py  performance_tracker.py  presets.py
