[project]
name = "gpt-oss-thinking-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.5.1",
    "streamlit>=1.47.1",
    "PySide6>=6.7.0",
    "markdown2>=2.4.0",
    "pygments>=2.18.0",
    "qtawesome>=1.3.1",
]

[project.scripts]
gpt-oss-desktop = "desktop_app:run"