[project]
name = "gpt-oss-thinking-ui"
version = "0.1.0"
description = "Desktop UI for GPT-OSS with thinking/reasoning capabilities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.5.1",
    "PySide6>=6.7.0",
    "markdown2>=2.4.0",
    "pygments>=2.18.0",
    "qtawesome>=1.3.1",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
]

[project.scripts]
gpt-oss-desktop = "desktop_app:run"